--- a/me.html
+++ b/me.html
@@ -43,19 +43,9 @@
 </header>
 
 
-
-
-<div class = "form1">
-  <form name="myForm">
-
-  <input type = "text" class = "signUp" name= "name" placeholder="what's your name?">
-
-  <button onclick = "validateForm()" id = "go" class = "btn">Get Started</button>
-
-</form>
-
-
-</div>
+<div id="header-image" class="center">
+					<img src="./imgs/user2.png" alt = "name">
+				</div>
 <script src="js/index.js"></script>
 
 
