--- a/index.html
+++ b/index.html
@@ -45,18 +45,86 @@
 
 
 
-<div class = "form1">
-  <form name="myForm">
-
-  <input type = "text" class = "signUp" onChange="check_user(this.value);"  name= "name" placeholder="what's your name?">
-
-  <button onclick = "validateForm()" id = "go" class = "btn">Get Started</button>
-
-</form>
-
-
-</div>
 <script src="js/index.js"></script>
+
+<div class="cotn_principal">
+<div class="cont_centrar">
+
+  <div class="cont_login">
+<div class="cont_info_log_sign_up">
+      <div class="col_md_login">
+<div class="cont_ba_opcitiy">
+
+        <h2>LOGIN</h2>
+  <p>Already have an account?</p>
+  <button class="btn_login" onclick="cambiar_login()">LOGIN</button>
+  </div>
+  </div>
+<div class="col_md_sign_up">
+<div class="cont_ba_opcitiy">
+  <h2>SIGN UP</h2>
+
+
+  <p>Sign up to get started!</p>
+
+  <button class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
+</div>
+  </div>
+       </div>
+
+
+    <div class="cont_back_info">
+       <div class="cont_img_back_grey">
+       <img src="https://images.unsplash.com/42/U7Fc1sy5SCUDIu4tlJY3_NY_by_PhilippHenzler_philmotion.de.jpg?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=7686972873678f32efaf2cd79671673d" alt="" />
+       </div>
+
+    </div>
+<div class="cont_forms" >
+    <div class="cont_img_back_">
+       <img src="https://images.unsplash.com/42/U7Fc1sy5SCUDIu4tlJY3_NY_by_PhilippHenzler_philmotion.de.jpg?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=7686972873678f32efaf2cd79671673d" alt="" />
+       </div>
+ <div class="cont_form_login">
+<a href="#" onclick="ocultar_login_sign_up()" ><i class="material-icons">&#xE5C4;</i></a>
+   <h2>LOGIN</h2>
+ <input type="text" placeholder="Email" id = "loginEmail" />
+<input type="password" placeholder="Password" id = "loginPassword" />
+<button class="btn_login" onclick="cambiar_login()">LOGIN</button>
+  </div>
+
+   <div class="cont_form_sign_up">
+<a href="#" onclick="ocultar_login_sign_up()"><i class="material-icons">&#xE5C4;</i></a>
+     <h2>SIGN UP</h2>
+<input type="text" placeholder="Email" id = "signEmail"/>
+<input type="text" placeholder="Username" id = "signUsername"/>
+<input type="password" placeholder="Password" id = "signPassword" />
+<input type="password" placeholder="Confirm Password" id = "signConfirmPassword"/>
+<button class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
+
+  </div>
+
+    </div>
+
+  </div>
+ </div>
+
+ <!--<input type = "text" id = "editInput" class = "signUp"  name= "name" placeholder="what's your name?">
+
+ <div class = "form1">
+   <form name="myForm">
+
+   <script>
+   setInterval(function() { buttonVisible($('#editInput').val()); }, 100);
+   </script>
+   <button onclick = "validateForm()" id = "go" class = "btn">Get Started</button>
+
+ </form>
+
+
+ </div>
+-->
+</div>
+
+
 
 
 
