see what's going on

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
 
 
-<script src="js/index.js"></script>
 
 <div class="cotn_principal">
 <div class="cont_centrar">
@@ -57,7 +56,7 @@
 
         <h2>LOGIN</h2>
   <p>Already have an account?</p>
-  <button class="btn_login" onclick="cambiar_login()">LOGIN</button>
+  <button class="btn_login" onclick= "cambiar_login()">LOGIN</button>
   </div>
   </div>
 <div class="col_md_sign_up">
@@ -97,7 +96,7 @@
 <input type="text" placeholder="Email" id = "signEmail"/>
 <input type="text" placeholder="Username" id = "signUsername"/>
 <input type="password" placeholder="Password" id = "signPassword" />
-<input type="password" placeholder="Confirm Password" id = "signConfirmPassword"/>
+<input type="password" placeholder="Confirm Password" id = "signConfirm"/>
 <button class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
 
   </div>
@@ -107,26 +106,18 @@
   </div>
  </div>
 
- <!--<input type = "text" id = "editInput" class = "signUp"  name= "name" placeholder="what's your name?">
-
- <div class = "form1">
-   <form name="myForm">
-
-   <script>
-   setInterval(function() { buttonVisible($('#editInput').val()); }, 100);
-   </script>
-   <button onclick = "validateForm()" id = "go" class = "btn">Get Started</button>
-
- </form>
 
 
- </div>
--->
+
+
+
 </div>
 
 
 
 
+
+<script src="js/index.js"></script>
 
 </body>
 </html>
